# risk-pipeline-v5

./: .gitignore  README.md  pyproject.toml
.github/workflows/: weekely.yml
config/: indicators.yaml
src/risk_pipeline/: cli.py  pipeline.py
src/risk_pipeline/connectors/: acled.py  ndgain.py  owid.py  vendor_csv.py  wgi.py  worldbank.py
